<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="saveClient">Save Sucess</string>
    <string name="listClient">List Client</string>
    <string name="fieldInvalid">Filed Required.</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="msg_delete_client">Delete Sucess!</string>
    <string name="msg_valid_delete">Would you like to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="cep">Cep</string>
    <string name="typeLogradouro">Tipo Logradouro</string>
    <string name="logradouro">Logradouro</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="msg_erro_cep">Cep não existe</string>
    <string name="msg_login_invalid">Login or Password Invalid.</string>
    <string name="msg_login_sucess">Login Sucess.</string>
    <string name="msg_cep_valida">Cep deve conter 8 numeros.</string>
</resources>
